-------------------------------------------------------------------
unmerged changes - anaselli@linux.it
- Implementation of optional widget YTimeField
- Implementation of optional widget YDateField
- new class NCInputText to share code between NCTimeField, NCDateField
  and NCInputField

-------------------------------------------------------------------
Tue Feb  3 13:57:26 CET 2015 - gs@suse.de

- don't use internal ncurses (_nc_) functions (bnc #915945)
- 2.46.9

-------------------------------------------------------------------
Tue Jan 20 16:09:58 UTC 2015 - mvidner@suse.com

- Fixed building with cmake 3.1 (PREFIX in spec, boo#911875).
- 2.46.8

-------------------------------------------------------------------
Fri Nov  7 14:13:38 UTC 2014 - anaselli@linux.it

- RichText hyperlinks: return as strings, like Qt and GTK do.
  (gh#libyui/libyui-ncurses#30)
- 2.46.7

-------------------------------------------------------------------
Thu Jul 10 12:09:39 CEST 2014 - gs@suse.de

- Improve table sorting: interpret numbers correctly (related to
  previous fix for bnc #885653),
  Multiselection table: don't set focus to last line (partial
  bug-fix for bnc #885278) 
- 2.46.6

-------------------------------------------------------------------
Wed Jul  9 12:10:11 CEST 2014 - gs@suse.de

- Table sorting: always sort as strings, don't try interpreting
  as numbers (bnc #885653)
- 2.46.5

-------------------------------------------------------------------
Tue Apr  8 12:42:03 CEST 2014 - gs@suse.de

- Display menu (function keys) correctly in non UTF-8 environment
  (bnc #865597)
- 2.46.4

-------------------------------------------------------------------
Fri Feb 28 12:35:39 CET 2014 - gs@suse.de

- fixed segfault in tree widget (bnc #866145)

-------------------------------------------------------------------
Wed Jan 29 15:08:55 CET 2014 - gs@suse.de

- code cleanup concerning text domain
- 2.46.2

-------------------------------------------------------------------